crates/mega-evm/tests/tracers/snapshots/tracers__harness__keyless_success__call_with_log.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.call_frame(true)"
---
{
  "from": "0x0000000000000000000000000000000000400000",
  "gas": "0x274d18",
  "gasUsed": "0x8c898",
  "to": "0x6342000000000000000000000000000000000003",
  "input": "0x846365d5000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000002540be4000000000000000000000000000000000000000000000000000000000000000061f85f8085174876e800830f424080808e600361000b5f3960035ff35f5ff31ba02222222222222222222222222222222222222222222222222222222222222222a0222222222222222222222222222222222222222222222222222222222222222200000000000000000000000000000000000000000000000000000000000000",
  "output": "0x0000000000000000000000000000000000000000000000000000000000001312000000000000000000000000cdde5625080d22bb0772fb7b1197e9b68b5d881f00000000000000000000000000000000000000000000000000000000000000600000000000000000000000000000000000000000000000000000000000000000",
  "calls": [
    {
      "from": "0x321d4f4b0b29391cf2978fba82b6900524a09945",
      "gas": "0x1e9792",
      "gasUsed": "0x1312",
      "to": "0xcdde5625080d22bb0772fb7b1197e9b68b5d881f",
      "input": "0x600361000b5f3960035ff35f5ff3",
      "output": "0x5f5ff3",
      "value": "0x0",
      "type": "CREATE"
    }
  ],
  "value": "0x0",
  "type": "CALL"
}
