crates/mega-evm/tests/tracers/snapshots/tracers__harness__keyless_success__eip3155.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: trace
---
{"pc":0,"depth":2,"opName":"PUSH1","op":96,"gas":"0x1e9792","reservoir":"0x0","stateGas":"0x0","gasCost":"0x3","stack":[],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":2,"depth":2,"opName":"PUSH2","op":97,"gas":"0x1e978f","reservoir":"0x0","stateGas":"0x0","gasCost":"0x3","stack":["0x3"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":5,"depth":2,"opName":"PUSH0","op":95,"gas":"0x1e978c","reservoir":"0x0","stateGas":"0x0","gasCost":"0x2","stack":["0x3","0xb"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":6,"depth":2,"opName":"CODECOPY","op":57,"gas":"0x1e978a","reservoir":"0x0","stateGas":"0x0","gasCost":"0x9","stack":["0x3","0xb","0x0"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":7,"depth":2,"opName":"PUSH1","op":96,"gas":"0x1e9781","reservoir":"0x0","stateGas":"0x0","gasCost":"0x3","stack":[],"returnData":"0x","refund":"0x0","memSize":"0x20"}
{"pc":9,"depth":2,"opName":"PUSH0","op":95,"gas":"0x1e977e","reservoir":"0x0","stateGas":"0x0","gasCost":"0x2","stack":["0x3"],"returnData":"0x","refund":"0x0","memSize":"0x20"}
{"pc":10,"depth":2,"opName":"RETURN","op":243,"gas":"0x1e977c","reservoir":"0x0","stateGas":"0x0","gasCost":"0x0","stack":["0x3","0x0"],"returnData":"0x","refund":"0x0","memSize":"0x20","error":"Return"}
{"stateRoot":"0x0000000000000000000000000000000000000000000000000000000000000000","output":"0x0000000000000000000000000000000000000000000000000000000000001312000000000000000000000000cdde5625080d22bb0772fb7b1197e9b68b5d881f00000000000000000000000000000000000000000000000000000000000000600000000000000000000000000000000000000000000000000000000000000000","gasUsed":"0x8b59c","pass":true,"fork":"Osaka"}
