crates/mega-evm/tests/tracers/snapshots/tracers__harness__keyless_success__prestate.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.prestate(false)"
---
{
  "0x0000000000000000000000000000000000000000": {
    "balance": "0x0"
  },
  "0x0000000000000000000000000000000000400000": {
    "balance": "0x38d7ea4c68000"
  },
  "0x321d4f4b0b29391cf2978fba82b6900524a09945": {
    "balance": "0x0"
  },
  "0x4200000000000000000000000000000000000019": {
    "balance": "0x0"
  },
  "0x420000000000000000000000000000000000001a": {
    "balance": "0x0"
  },
  "0x420000000000000000000000000000000000001b": {
    "balance": "0x0"
  },
  "0x6342000000000000000000000000000000000003": {
    "balance": "0x0",
    "code": "0x608060405234801561000f575f5ffd5b5060043610610034575f3560e01c806354fd4d5014610038578063846365d514610080575b5f5ffd5b604080518082018252600581527f312e302e30000000000000000000000000000000000000000000000000000000602082015290516100779190610124565b60405180910390f35b61009361008e36600461013d565b6100a2565b604051610077939291906101af565b5f5f60606040517f1894f07600000000000000000000000000000000000000000000000000000000815260040160405180910390fd5b5f81518084528060208401602086015e5f6020828601015260207fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffe0601f83011685010191505092915050565b602081525f61013660208301846100d8565b9392505050565b5f5f5f6040848603121561014f575f5ffd5b833567ffffffffffffffff811115610165575f5ffd5b8401601f81018613610175575f5ffd5b803567ffffffffffffffff81111561018b575f5ffd5b86602082840101111561019c575f5ffd5b6020918201979096509401359392505050565b67ffffffffffffffff8416815273ffffffffffffffffffffffffffffffffffffffff83166020820152606060408201525f6101ed60608301846100d8565b9594505050505056fea164736f6c634300081e000a"
  },
  "0xcdde5625080d22bb0772fb7b1197e9b68b5d881f": {
    "balance": "0x0"
  }
}
