crates/mega-evm/tests/tracers/snapshots/tracers__harness__keyless_success__prestate_diff.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.prestate(true)"
---
{
  "post": {
    "0x0000000000000000000000000000000000400000": {
      "nonce": 1
    },
    "0x321d4f4b0b29391cf2978fba82b6900524a09945": {
      "nonce": 1
    },
    "0xcdde5625080d22bb0772fb7b1197e9b68b5d881f": {
      "code": "0x5f5ff3",
      "nonce": 1
    }
  },
  "pre": {
    "0x0000000000000000000000000000000000400000": {
      "balance": "0x38d7ea4c68000"
    },
    "0x321d4f4b0b29391cf2978fba82b6900524a09945": {
      "balance": "0x0"
    }
  }
}
