crates/mega-evm/tests/tracers/snapshots/tracers__harness__keyless_success__struct_logs.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.struct_logs()"
---
{
  "failed": false,
  "gas": 575640,
  "returnValue": "0x0000000000000000000000000000000000000000000000000000000000001312000000000000000000000000cdde5625080d22bb0772fb7b1197e9b68b5d881f00000000000000000000000000000000000000000000000000000000000000600000000000000000000000000000000000000000000000000000000000000000",
  "structLogs": []
}
